# space

./: CMakeLists.txt  Dockerfile  README.md  main.cpp  simulation_output.txt
cmake/: AddCatch2.cmake
src/: CMakeLists.txt  home_base.cpp  home_base.hpp  mining_truck.cpp  mining_truck.hpp  mining_truck_metrics.cpp  mining_truck_metrics.hpp  mining_unload_station.cpp  mining_unload_station.hpp  simulation.cpp  simulation.hpp  unload_station_metrics.cpp  unload_station_metrics.hpp
tests/: CMakeLists.txt  mining_truck_metrics_test.cpp  mining_truck_test.cpp  mining_unload_station_test.cpp  unload_station_metrics_test.cpp
